authentication with jwt completed

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "1qaz2wsx3edc",
+    "password": "url.Manga22",
     "database": "cc_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
